--- a/README
+++ b/README
@@ -3,7 +3,7 @@ websightr is a website where people can discuss website ideas.
 
 
 stuff to add:
-ability to addd website ideas
+ability to add website ideas
 auth (facebook)
 ability to comment on website ideas
 ability to 'like' website ideas
